--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="src/assets/images/svg/logo-ico.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Metsenat Project</title>
+    <title>Metsenat Admin</title>
   </head>
   <body>
     <div id="root"></div>
